Fixed vertical spacing between text/images

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -210,6 +210,7 @@ main .section-container {
     flex-direction: row;
     flex-wrap: wrap;
     padding: 0 15%;
+    margin: 0 20px 100px;
   }
 }
 .section-container section {
@@ -241,7 +242,7 @@ main .section-container {
 @media (min-width: 1000px) {
   .section-container section {
     width: 45%;
-    height: 625px;
+    max-height: 50%;
   }
 }
 .section-container section .text-container {
